<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvExpenseListItemCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/tvExpenseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="140dp"
            android:layout_marginTop="58dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tv_test_value"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="97dp"
            android:layout_height="108dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/wallet_icon_desc"
            app:srcCompat="@drawable/ic_wallet" />

        <TextView
            android:id="@+id/tvExpenseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="140dp"
            android:layout_marginTop="83dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tv_test_date"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvExpenseCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="140dp"
            android:layout_marginTop="108dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tv_test_expense_total_value"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvCategoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="12dp"
            android:text="@string/tv_test_value"
            android:textSize="15sp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

</RelativeLayout>