<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.FuelCalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp" >

        <androidx.cardview.widget.CardView
            android:id="@+id/cvExpenseListItemCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/btn_calculate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etMileage" />

                <EditText
                    android:id="@+id/etMileage"
                    android:layout_width="245dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:hint="@string/mileage"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivMileage"
                    app:layout_constraintTop_toBottomOf="@+id/etFuelPrice"
                    tools:ignore="SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/etFuelPrice"
                    android:layout_width="245dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:hint="@string/fuel_price"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivFuelPrice"
                    app:layout_constraintTop_toBottomOf="@+id/etTripDistance"
                    tools:ignore="SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/etTripDistance"
                    android:layout_width="245dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:hint="@string/trip_distance"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivDist"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageView
                    android:id="@+id/ivDist"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_distance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivFuelPrice"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_fuel_price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivDist" />

                <ImageView
                    android:id="@+id/ivMileage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_fuel_calculator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivFuelPrice" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvLblFNeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/tv_fuel_needed"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvExpenseListItemCard" />

        <TextView
            android:id="@+id/tvLblTotalFPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:textSize="15sp"
            android:text="@string/tv_total_fuel_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLblFNeed" />

        <TextView
            android:id="@+id/tvFuelNeeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/tvLblFNeed"
            app:layout_constraintTop_toBottomOf="@+id/cvExpenseListItemCard" />

        <TextView
            android:id="@+id/tvTotalFuelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/tvLblTotalFPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvFuelNeeded" />

        <Button
            android:id="@+id/btnAddAsExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/btn_add_as_expense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLblTotalFPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>